// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gap[Base] should render correctly  1`] = `
<div
  class="c-o1y071 soui-gap-wrapper"
  style="margin-bottom: -8px; margin-right: -8px; width: 400px;"
>
  <div
    class="c-ws2uot soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="c25800a soui-button-primary c9j4dnu soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="c-ws2uot soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="c25800a soui-button-primary c9j4dnu soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="c-ws2uot soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="c25800a soui-button-primary c9j4dnu soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="c-ws2uot soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="c25800a soui-button-primary c9j4dnu soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="c-ws2uot soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="c25800a soui-button-primary c9j4dnu soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="c-ws2uot soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="c25800a soui-button-primary c9j4dnu soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="c-ws2uot soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="c25800a soui-button-primary c9j4dnu soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="c-ws2uot soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="c25800a soui-button-primary c9j4dnu soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="c-ws2uot soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="c25800a soui-button-primary c9j4dnu soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="c-ws2uot soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="c25800a soui-button-primary c9j4dnu soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
</div>
`;

exports[`Gap[Base] should render correctly about align 1`] = `
<div
  class="cmxd0kq soui-radio-group"
>
  <div
    class="cyirhq6 soui-radio-wrapper c-uazd13 soui-radio-wrapper-checked"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmfinsp soui-radio-indicator-wrapper"
    >
      <span
        class="c-7zjjk6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-xmqy62 soui-radio-desc"
    >
      flex-start
    </span>
  </div>
  <div
    class="cyirhq6 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmfinsp soui-radio-indicator-wrapper"
    >
      <span
        class="c-7zjjk6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-xmqy62 soui-radio-desc"
    >
      center
    </span>
  </div>
  <div
    class="cyirhq6 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmfinsp soui-radio-indicator-wrapper"
    >
      <span
        class="c-7zjjk6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-xmqy62 soui-radio-desc"
    >
      flex-end
    </span>
  </div>
  <div
    class="cyirhq6 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmfinsp soui-radio-indicator-wrapper"
    >
      <span
        class="c-7zjjk6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-xmqy62 soui-radio-desc"
    >
      baseline
    </span>
  </div>
</div>
`;

exports[`Gap[Base] should render correctly about custom 1`] = `
<div
  style="display: flex; align-items: center; margin-bottom: 16px;"
>
  <div
    style="width: 80px;"
  >
    column:
  </div>
  <div
    class="c-g4vmes soui-slider-wrapper"
    style="flex: 1;"
  >
    <div
      class="cg1thok soui-slider-track"
    >
      <div
        class="c2d8stu soui-slider-track-inner"
        dir="ltr"
        style="left: 0%; right: 92%;"
      >
        <div
          class="c-wxfego soui-slider-indicator cxe9sqb soui-slider-indicator-end"
          dir="ltr"
        />
        <div
          class="c-b8scsj soui-slider-end-value cg2mgoa soui-slider-value"
          dir="ltr"
        >
          8
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Gap[Base] should render correctly about vertical 1`] = `
<div
  class="c-o1y071 soui-gap-wrapper"
  style="margin-bottom: -10px; margin-right: -8px; width: 400px; flex-direction: column;"
>
  <div
    class="c-ws2uot soui-gap-item"
    style="margin-bottom: 10px; margin-right: 8px;"
  >
    <button
      class="c25800a soui-button-primary c9j4dnu soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="c-ws2uot soui-gap-item"
    style="margin-bottom: 10px; margin-right: 8px;"
  >
    <button
      class="c25800a soui-button-primary c9j4dnu soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="c-ws2uot soui-gap-item"
    style="margin-bottom: 10px; margin-right: 8px;"
  >
    <button
      class="c25800a soui-button-primary c9j4dnu soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="c-ws2uot soui-gap-item"
    style="margin-bottom: 10px; margin-right: 8px;"
  >
    <button
      class="c25800a soui-button-primary c9j4dnu soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
</div>
`;
